# qtcreator-plugin-discord-presence

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CuteDiscordPresence.json  CuteDiscordPresence.json.in  README.md  cutediscordpresence.cpp  cutediscordpresence.h
.github/workflows/: build_cmake.yml
cmake/: Finddiscord-rpc.cmake
